--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "http://jennjxf.github.io/portfolio",
+  "homepage": "https://jennjxf.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
